# nonebot_plugin_statistical

./: README.md  pyproject.toml
nonebot_plugin_statistical/: config.py  statistical_handle.py  statistical_hook.py
