[tool.poetry]
name = "nonebot-plugin-statistical"
version = "0.1.0"
description = "基于 run_postprocessor 实现的功能调用统计以及可视化，且可为插件设置别名和显示白名单"
authors = ["HibiKier <775757368@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.2"
matplotlib = "^3.5.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
